syntax = "proto3";

package remotecache;

// 获取缓存的请求体
message GetRequest {
  string group = 1;
  string key = 2;
}
// 获取缓存的返回体
message GetResponse {
  bytes value = 1;
}

message SetRequest {
  string group = 1;
  string key = 2;
  bytes value = 3;
}

message SetResponse {
  bool success = 1;
  string message = 2;
}


service GroupCache {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
}